fixed about.component and added custom scrollbar

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -4,7 +4,7 @@ section {
   padding: 0px 20px 0px;
 }
 
-hr {
+section br {
   margin-bottom: 100px;
 }
 
